@@ -39,7 +39,7 @@ import org.xml.sax.SAXException;
  * @test
  * @bug 6975265
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true validation.tck.Bug6975265Test
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow validation.tck.Bug6975265Test
  * @run testng/othervm validation.tck.Bug6975265Test
  * @summary Test Schema doesn't allow some Element Information Items contain other element information item.
  */
